# svarstore

./: .gitignore  PKGBUILD  README.md  meson.build
.github/workflows/: build.yml
cli/: daemon.c  erase.c  flush.c  internal.h  list.c  main.c  meson.build  order-list.c  order-replace.c  order-set.c  reload.c  usage.c
debian/: changelog  control  copyright  libsvarstore-dev.install  libsvarstore0.install  rules  svarstore.install
include/: blk.h  efi-base.h  order.h  svarstore.h
lib/: abstract.c  basic.c  blk.c  char16.c  crc32.c  getset.c  internal.h  load.c  meson.build  order.c  save.c  uuid.c
